Fixed wrong font name

--- a/css/skin.css
+++ b/css/skin.css
@@ -65,7 +65,7 @@ cite,
 .accordion li a, 
 .tabs li a,
 .overlay-navigation-wrapper .site-search .form-element{
-	font-family: 'Monserrat', 'Helvetica Neue', sans-serif;
+	font-family: 'Montserrat', 'Helvetica Neue', sans-serif;
 }
 
 /* Links */
